--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="overlay"></div>
 
         <!-- The HTML5 video element that will create the background video on the header -->
-        <video class="background-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
           <source src="videos/background-video.mp4" type="video/mp4">
         </video>
 
