Updated job titles

--- a/index.html
+++ b/index.html
@@ -95,22 +95,29 @@
                 <br>
                 <div data-aos="fade-left" data-aos-duration="1000">
                     <p>
-                        Sam Gannaway - Founder<br>
+                        Sam Gannaway - Founder &amp; Inventor<br>
                         <a style="color: white;" href="sam@dipndrive.com">sam@dipndrive.com</a>
                     </p>
                 </div>
                 <br>
                 <div data-aos="fade-right" data-aos-duration="1000">
                     <p>
-                        Neil Gannaway - President<br>
+                        Neil Gannaway - Social Media Manager<br>
                         <a style="color: white;" href="neil@dipndrive.com">neil@dipndrive.com</a>
                     </p>
                 </div>
                 <br>
                 <div data-aos="fade-left" data-aos-duration="1000">
                     <p>
-                        Cole Gannaway - CTO<br>
+                        Cole Gannaway - Design Engineer<br>
                         <a style="color: white;" href="cole@dipndrive.com">cole@dipndrive.com</a>
+                    </p>
+                </div>
+                <br>
+                <div data-aos="fade-right" data-aos-duration="1000">
+                    <p>
+                        Ellen Lail - Business Devlopment Specialist<br>
+                        <a style="color: white;" href="ellen@lail.com">ellen@lail.com</a>
                     </p>
                 </div>
             </div>
