Added FAQ section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/icon-256x256.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Dip 'N Drive Condiment Container are the future of personal containers" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-192x192.png" /> -->
     <title>Dip 'N Drive - Drive Thru Condiment Container</title>
 </head>
@@ -90,6 +90,34 @@
         <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
                 <div data-aos="fade-right" data-aos-duration="1000">
+                    <h1 class="display-3">FAQs</h1>
+                </div>
+                <br>
+                <div data-aos="fade-left" data-aos-duration="1000">
+                    <h6 class="display-6">Q: Will the container sit flat on the table?</h6>
+                    <p>A: Yes - Dip 'N Drive containers are even <b>STACKABLE</b>!</p>
+                </div>
+                <br>
+                <div data-aos="fade-right" data-aos-duration="1000">
+                    <h6 class="display-6">Q: How many times do I use the container?</h6>
+                    <p>A: The containers are <b>SINGLE-USE</b> because they are pre-packaged and sealed with sauce.</p>
+                </div>
+                <br>
+                <div data-aos="fade-left" data-aos-duration="1000">
+                    <h6 class="display-6">Q: Can I still drink with an opened container on my cup?</h6>
+                    <p>A: Yes - sauces such as ketchup, BBQ, and ranch have a high viscosity and do <b>NOT</b> pour out when tilting a drink.</p>
+                </div>
+                <br>
+            </div>
+        </div>
+        <div style="height: 100px;"></div>
+    </section>
+
+    <section class="section-five">
+        <div style="height: 100px;"></div>
+        <div class="d-flex h-100 text-center align-items-center">
+            <div class="w-100 text-white">
+                <div data-aos="fade-right" data-aos-duration="1000">
                     <h1 class="display-3">Contact Us</h1>
                 </div>
                 <br>
@@ -136,6 +164,14 @@
                             <a href="https://www.instagram.com/dip_n_drive_/"><i class="fab fa-instagram fa-2xl"></i></a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div style="height: 100px;"></div>
+        <div data-aos="fade-right" data-aos-duration="1000">
+            <div class="d-flex h-100 text-center align-items-center">
+                <div class="w-100 text-white">
+                    <h6 class="display-6"><a style="color: white;" href="about.html">Our Story</a></h6>
                 </div>
             </div>
         </div>
