Uploaded new patent

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div style="height: 100px;"></div>
         <div data-aos="fade-right" data-aos-duration="1000">
             <h1 style="color: white; text-align: center;">Patent Protected</h1>
-            <div class="col-md-11 mx-auto">
-                <embed src="pdfs/patent.pdf" width="100%" height="600px" type="application/pdf">
+            <div style="text-align: center;">
+                <iframe id="pdfviewer" src="http://docs.google.com/gview?embedded=true&url=https://www.dipndrive.com/pdfs/patent.pdf&amp;embedded=true" frameborder="0" width="80%" height="500"></iframe>
             </div>
         </div>
         <div style="height: 100px;"></div>
