--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Metadata -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/icon-256x256.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,9 +23,11 @@
 <body>
 
     <section class="section-one">
-
+        <div style="height: 20px;"></div>
+        <div>
+            <a style="color: white;" href="/index.html"><i class="fa-solid fa-house fa-2xl"></i></a>
+        </div>
         <div style="height: 100px;"></div>
-
         <div data-aos="fade-right" data-aos-duration="1000">
             <div class="d-flex h-100 text-center align-items-center">
                 <div class="w-100 text-white">
