--- a/index.html
+++ b/index.html
@@ -115,6 +115,27 @@
     <section class="section-five">
         <div style="height: 100px;"></div>
         <div class="d-flex h-100 text-center align-items-center">
+
+            <div class="w-100 text-white">
+                <div data-aos="fade-right" data-aos-duration="1000">
+                    <h1 class="display-3">Our Story</h1>
+                </div>
+                <div data-aos="fade-right" data-aos-duration="1000">
+                    <img src="images/family-photo.jpg" alt="family-photo" width="80%" style="max-width: 400px; border-radius: 50%;">
+
+                </div>
+                <br>
+                <div data-aos="fade-right" data-aos-duration="1000">
+                    <a class="btn btn-lg btn-outline-light" href="about.html" role="button">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div style="height: 100px;"></div>
+    </section>
+
+    <section class="section-six">
+        <div style="height: 100px;"></div>
+        <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
                 <div data-aos="fade-right" data-aos-duration="1000">
                     <h1 class="display-3">Contact Us</h1>
@@ -167,15 +188,8 @@
             </div>
         </div>
         <div style="height: 100px;"></div>
-        <div data-aos="fade-right" data-aos-duration="1000">
-            <div class="d-flex h-100 text-center align-items-center">
-                <div class="w-100 text-white">
-                    <h6 class="display-6"><a style="color: white;" href="about.html">Our Story</a></h6>
-                </div>
-            </div>
-        </div>
-        <div style="height: 100px;"></div>
     </section>
+
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
