Updated Our Story - story

--- a/about.html
+++ b/about.html
@@ -50,19 +50,24 @@
                     <div data-aos="fade-left" data-aos-duration="1000">
                         <h3>How did we get here?</h3>
                     </div>
-                    <div style="height: 50px;"></div>
+                    <br /><br />
                     <div data-aos="fade-right" data-aos-duration="1000">
                         <p>
                             Sam <b>LOVES</b> ketchup and Sam <b>LOVES</b> sports!
                         </p>
                     </div>
-                    <div style="height: 50px;"></div>
+                    <br />
                     <div data-aos="fade-left" data-aos-duration="1000">
                         <p>
-                            So when his boys began travel ball and school sports, he and Sandy were on the road <b>A LOT</b>. Fast food became necessary evil to be able to watch both boys' games. <br>Sam loves dipping his fries into ketchup, but dipping
-                            and driving had not yet been perfected. Sam would have to rip open multiple packets and carefully squirt them into another container without making a mess. Unfortunately, this was only the beginning of the fiasco. Once on the
-                            road, Sam had to keep his eyes on the road while feeling around for the floating container of ketchup without knock over the container or accidentally dipping his finger into it. <br>Finally after spending 8 hours on the road
-                            every weekend, Sam perfected the Dip 'N Drive container as it is today.
+                            So when his boys began travel ball and school sports, he and
+                            Sandy were on the road - <b>A LOT</b>. Fast food became an essential 
+                            part of the travelling routine to be able to watch both boys' games.<br /><br />
+                            Sam loves his fries with ketchup, but
+                            staying on the move made it hard to do. He would open multiple
+                            packets and try to dip his food in ketchup, and other
+                            condiments, usually making a mess while trying to keep his eyes
+                            on the road. Finally he came up with the perfect idea - and Dip
+                            N' Drive was born!
                         </p>
                     </div>
                 </div>
