--- a/about.html
+++ b/about.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4ZT0DXTWR3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-4ZT0DXTWR3');
+    </script>
     <meta charset="utf-8" />
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="about-styles.css">
