--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <br>
                 <div data-aos="fade-right" data-aos-duration="1000">
                     <p>
-                        Ellen Lail - Business Devlopment Specialist<br>
+                        Ellen Lail - Business Development Specialist<br>
                         <a style="color: white;" href="ellen@lail.com">ellen@lail.com</a>
                     </p>
                 </div>
