Fixed size of patent pdf

--- a/index.html
+++ b/index.html
@@ -71,17 +71,6 @@
         <div style="height: 100px;"></div>
     </section>
 
-    <section class="section-two">
-        <div style="height: 100px;"></div>
-        <div data-aos="fade-right" data-aos-duration="1000">
-            <h1 style="color: white; text-align: center;">Patent Protected</h1>
-            <div style="text-align: center;">
-                <iframe id="pdf-js-viewer" src="/pdfjs-2.13.216-dist/web/viewer.html?file=/pdfs/patent.pdf" title="webviewer" frameborder="0" width="90%" height="500"></iframe>
-            </div>
-        </div>
-        <div style="height: 100px;"></div>
-    </section>
-
     <section class="section-three">
         <div style="height: 100px;"></div>
         <div data-aos="fade-right" data-aos-duration="1000">
@@ -140,6 +129,17 @@
                 <div data-aos="fade-right" data-aos-duration="1000">
                     <a class="btn btn-lg btn-outline-light" href="about.html" role="button">Read More</a>
                 </div>
+            </div>
+        </div>
+        <div style="height: 100px;"></div>
+    </section>
+
+    <section class="section-two" style="height: 1000;">
+        <div style="height: 100px;"></div>
+        <div data-aos="fade-right" data-aos-duration="1000">
+            <h1 style="color: white; text-align: center;">Patent Protected</h1>
+            <div style="text-align: center;">
+                <iframe id="pdf-js-viewer" src="/pdfjs-2.13.216-dist/web/viewer.html?file=/pdfs/patent.pdf" title="webviewer" frameborder="0" width="90%" height="600"></iframe>
             </div>
         </div>
         <div style="height: 100px;"></div>
