Added Sandy & Change Slogan

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="d-flex h-100 text-center align-items-center">
                 <div class="w-100 text-white">
                     <h1 class="display-3">Dip 'N Drive</h1>
-                    <p class="lead mb-0">The Perfect Personal Container</p>
+                    <p class="lead mb-0">The New Drive Thru Condiment Container</p>
                 </div>
             </div>
         </div>
@@ -157,6 +157,13 @@
                     <p>
                         Sam Gannaway - Founder &amp; Inventor<br>
                         <a style="color: white;" href="sam@dipndrive.com">sam@dipndrive.com</a>
+                    </p>
+                </div>
+                <br>
+                <div data-aos="fade-left" data-aos-duration="1000">
+                    <p>
+                        Sandy Gannaway - Co-Founder<br>
+                        <a style="color: white;" href="sandy@gannawaycompanies.com">sandy@gannawaycompanies.com</a>
                     </p>
                 </div>
                 <br>
