Changed FAQ's look

--- a/index.html
+++ b/index.html
@@ -92,19 +92,22 @@
                 <div data-aos="fade-right" data-aos-duration="1000">
                     <h1 class="display-3">FAQs</h1>
                 </div>
+                <hr>
                 <br>
                 <div data-aos="fade-left" data-aos-duration="1000">
-                    <h6 class="display-6">Q: Will the container sit flat on the table?</h6>
+                    <p>Q: Will the container sit flat on the table?</p>
                     <p>A: Yes - Dip 'N Drive containers are even <b>STACKABLE</b>!</p>
                 </div>
+                <hr>
                 <br>
                 <div data-aos="fade-right" data-aos-duration="1000">
-                    <h6 class="display-6">Q: How many times do I use the container?</h6>
+                    <p>Q: How many times do I use the container?</p>
                     <p>A: The containers are <b>SINGLE-USE</b> because they are pre-packaged and sealed with sauce.</p>
                 </div>
+                <hr>
                 <br>
                 <div data-aos="fade-left" data-aos-duration="1000">
-                    <h6 class="display-6">Q: Can I still drink with an opened container on my cup?</h6>
+                    <p>Q: Can I still drink with an opened container on my cup?</p>
                     <p>A: Yes - sauces such as ketchup, BBQ, and ranch have a high viscosity and do <b>NOT</b> pour out when tilting a drink.</p>
                 </div>
                 <br>
