--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <div class="col-md-11 mx-auto">
                 <div class="videoWrapper">
                     <!-- Copy & Pasted from YouTube -->
-                    <iframe width="560" height="349" src="https://www.youtube.com/embed/mh9hGfvs9E4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="349" src="https://www.youtube.com/embed/mh9hGfvs9E4?playlist=mh9hGfvs9E4&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </div>
