--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" href="images/family-photo.jpg"/>
     <title>Dip 'N Drive - Drive Thru Condiment Container</title>
     <!-- CSS -->
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <link href="native-css-styles.css" rel="stylesheet">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
