--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <br>
             &darr;
         </div>
-        <video autoplay loop muted class="absolute -z-10 w-auto min-w-full min-h-full max-w-none">
+        <video playsinline autoplay loop muted class="absolute -z-10 w-auto min-w-full min-h-full max-w-none">
             <source src="/videos/background-video.mp4" type="video/mp4" />
             Your browser does not support the video tag.
         </video>
