--- a/about.html
+++ b/about.html
@@ -14,21 +14,19 @@
 
         gtag('config', 'G-4ZT0DXTWR3');
     </script>
+    <!-- Metadata -->
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="images/family-photo.jpg"/>
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Dip 'N Drive Condiment Container are the future of personal containers" />
+    <link rel="apple-touch-icon" href="images/family-photo.jpg"/>
+    <title>Dip 'N Drive - Drive Thru Condiment Container</title>
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/dist/output.css">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet">
+    <link href="native-css-styles.css" rel="stylesheet">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- Metadata -->
-    <!-- <link rel="icon" href="%PUBLIC_URL%/icon-256x256.png" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-192x192.png" /> -->
     <title>Dip 'N Drive - Our Story</title>
 </head>
 
