--- a/about.html
+++ b/about.html
@@ -42,34 +42,52 @@
                         <img src="/images/family-photo.jpg" alt="family-photo" width="100%" class="m-auto my-4" style="max-width: 500px; border-radius: 50%;">
                         <figcaption class="text-white text-center text-sm">Cole, Sandy, Sam, and Neil Gannaway.</figcaption>
                     </div>
-                    <div class="text-white text-center">
-                        <div data-aos="fade-left" data-aos-duration="1000">
-                            <h3 class="text-3xl my-20">How did we get here?</h3>
-                        </div>
-                        <div data-aos="fade-right" data-aos-duration="1000">
-                            <p class="text-xl">
-                                Sam <b>LOVES</b> ketchup and Sam <b>LOVES</b> sports!
-                            </p>
-                        </div>
-                        <div data-aos="fade-left" data-aos-duration="1000">
-                            <p class="text-xl">
-                                So when his boys began travel ball and school sports, he and
-                                Sandy were on the road - <b>A LOT</b>. Fast food became an essential 
-                                part of the travelling routine to be able to watch both boys' games.<br /><br />
-                                Sam loves his fries with ketchup, but
-                                staying on the move made it hard to do. He would open multiple
-                                packets and try to dip his food in ketchup, and other
-                                condiments, usually making a mess while trying to keep his eyes
-                                on the road. Finally he came up with the perfect idea - and Dip
-                                N' Drive was born!
-                            </p>
-                        </div>
-                    </div>
-                    <div class="h-10"></div>
                 </div>
                 <div class="h-10 md:h-20"></div>
+
+                <div class="border-b border-gray-400 m-auto"></div>
+                
+                <div class="h-10 md:h-20"></div>
+                <div class="text-white text-justify">
+                    <div data-aos="fade-up" data-aos-duration="1000">
+                        <h3 class="text-3xl text-center my-10">How did we get here?</h3>
+                    </div>
+                    <div data-aos="fade-up" data-aos-duration="1000">
+                        <p class="text-xl">
+                            Sam <b>LOVES</b> ketchup and Sam <b>LOVES</b> sports!
+                        </p>
+                    </div>
+                    <div class="h-10"></div>
+                    <div data-aos="fade-up" data-aos-duration="1000">
+                        <p class="text-xl">
+                            So when his boys began travel ball and school sports, he and
+                            Sandy were on the road - <b>A LOT</b>. Fast food became an essential 
+                            part of the travelling routine to be able to watch both boys' games.<br /><br />
+                            Sam loves his fries with ketchup, but
+                            staying on the move made it hard to do. He would open multiple
+                            packets and try to dip his food in ketchup, and other
+                            condiments, usually making a mess while trying to keep his eyes
+                            on the road. Finally he came up with the perfect idea - and Dip
+                            N' Drive was born!
+                        </p>
+                    </div>
+                </div>
+                <div class="h-10 md:h-20"></div>
+
+                <div class="text-center text-white">
+                    <a data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" href="index.html">
+                        <button class="bg-transparent hover:bg-white text-white font-semibold hover:text-blue-500 py-2 px-4 border border-white hover:border-transparent rounded md:text-2xl">
+                            Go Back
+                        </button>
+                    </a>
+                </div>
+
+                <div class="h-40 md:h-40"></div>
+
             </div>
         </div>
+    </section>
+
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
