--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 </div>
                 <div class="h-10"></div>
                 <div class="text-center">
-                    <a data-aos="fade-right" data-aos-duration="1000" href="about.html" class="">
-                        <button href="about.html" class="bg-transparent hover:bg-white text-white font-semibold hover:text-blue-500 py-2 px-4 border border-white hover:border-transparent rounded md:text-2xl">
+                    <a data-aos="fade-right" data-aos-duration="1000" href="about.html">
+                        <button class="bg-transparent hover:bg-white text-white font-semibold hover:text-blue-500 py-2 px-4 border border-white hover:border-transparent rounded md:text-2xl">
                             Read More
                         </button>
                     </a>
