--- a/about.html
+++ b/about.html
@@ -35,19 +35,19 @@
     <section class="bg-[url('/images/mexico-beach-landscape-photo.jpeg')] w-full h-full bg-no-repeat bg-cover bg-left bg-fixed">
         <div class="custom-center-content-container">
             <div class="mx-10 sm:mx-20">
-                <div class="h-10 md:h-20"></div>
+                <div class="h-20"></div>
                 <div data-aos="fade-right" data-aos-duration="1000">
                     <h1 class="text-4xl md:text-6xl text-white text-center my-4">Our Story</h1>
                     <div class="my-6" data-aos="fade-right" data-aos-duration="1000">
                         <img src="/images/family-photo.jpg" alt="family-photo" width="100%" class="m-auto my-4" style="max-width: 500px; border-radius: 50%;">
-                        <figcaption class="text-white text-center text-sm">Cole, Sandy, Sam, and Neil Gannaway.</figcaption>
+                        <figcaption class="text-white text-center">Cole, Sandy, Sam, and Neil Gannaway.</figcaption>
                     </div>
                 </div>
-                <div class="h-10 md:h-20"></div>
+                <div class="h-20"></div>
 
                 <div class="border-b border-gray-400 m-auto"></div>
                 
-                <div class="h-10 md:h-20"></div>
+                <div class="h-20"></div>
                 <div class="text-white text-justify">
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <h3 class="text-3xl text-center my-10">How did we get here?</h3>
@@ -57,7 +57,7 @@
                             Sam <b>LOVES</b> ketchup and Sam <b>LOVES</b> sports!
                         </p>
                     </div>
-                    <div class="h-10"></div>
+                    <div class="h-20"></div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <p class="text-xl">
                             So when his boys began travel ball and school sports, he and
@@ -72,7 +72,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="h-10 md:h-20"></div>
+                <div class="h-20"></div>
 
                 <div class="text-center text-white">
                     <a data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" href="index.html">
@@ -82,8 +82,7 @@
                     </a>
                 </div>
 
-                <div class="h-40 md:h-40"></div>
-
+                <div class="h-40"></div>
             </div>
         </div>
     </section>
