--- a/src/index.html
+++ b/src/index.html
@@ -153,44 +153,36 @@
                 <div class="h-10"></div>
                 <div class="text-white text-center md:text-2xl">
                     <div data-aos="fade-left" data-aos-duration="1000">
-                        <p>
-                            Sam Gannaway - Founder &amp; Inventor<br>
-                            <a class="underline" href="sam@dipndrive.com">sam@dipndrive.com</a>
-                        </p>
+                        <p>Sam Gannaway - Founder &amp; Inventor</p>
+                        <a class="underline" href="mailto:sam@dipndrive.com">sam@dipndrive.com</a>
                     </div>
-                    <br>
+                    <div class="h-4"></div>
                     <div data-aos="fade-left" data-aos-duration="1000">
-                        <p>
-                            Sandy Gannaway - Co-Founder<br>
-                            <a class="underline" href="sandy@gannawaycompanies.com">sandy@gannawaycompanies.com</a>
-                        </p>
+                        <p>Sandy Gannaway - Co-Founder</p>
+                        <a class="underline" href="mailto:sandy@gannawaycompanies.com">sandy@gannawaycompanies.com</a>
                     </div>
-                    <br>
+                    <div class="h-4"></div>
                     <div data-aos="fade-right" data-aos-duration="1000">
-                        <p>
-                            Neil Gannaway - Social Media Manager<br>
-                            <a class="underline" href="neil@dipndrive.com">neil@dipndrive.com</a>
-                        </p>
+                        <p>Neil Gannaway - Social Media Manager</p>
+                        <a class="underline" href="mailto:neil@dipndrive.com">neil@dipndrive.com</a>
                     </div>
-                    <br>
+                    <div class="h-4"></div>
                     <div data-aos="fade-left" data-aos-duration="1000">
-                        <p>
-                            Cole Gannaway - Design Engineer<br>
-                            <a class="underline" href="cole@dipndrive.com">cole@dipndrive.com</a>
-                        </p>
+                        <p>Cole Gannaway - Design Engineer</p>
+                        <a class="underline" href="mailto:cole@dipndrive.com">cole@dipndrive.com</a>
                     </div>
-                    <br>
+                    <div class="h-4"></div>
                     <div data-aos="fade-right" data-aos-duration="1000">
-                        <p>
-                            Ellen Lail - Business Development Specialist<br>
-                            <a class="underline" href="ellen@lail.com">ellen@lail.com</a>
-                        </p>
+                        <p>Ellen Lail - Business Development Specialist</p>
+                        <a class="underline" href="mailto:ellen@lail.com">ellen@lail.com</a>
                     </div>
                 </div>
                 <div class="h-10 md:h-20"></div>
-                <div class="flex text-white text-center">
-                    <div class="flex-auto"><a href="https://www.facebook.com/Dipndrive-110534924738840"><i class="fab fa-facebook fa-2xl"></i></a></div>
-                    <div class="flex-auto"><a href="https://www.instagram.com/dip_n_drive_/"><i class="fab fa-instagram fa-2xl"></i></a></div>
+                <div class="flex flex-auto">
+                    <img data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="m-auto w-10 h-10 md:w-20 md:h-20"
+                        src="/images/facebook-logo.svg">
+                    <img data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="m-auto w-10 h-10 md:w-20 md:h-20"
+                        src="/images/instagram-logo.svg">
                 </div>
 
                 <div class="h-32"></div>
