--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <link rel="apple-touch-icon" href="images/family-photo.jpg"/>
     <title>Dip 'N Drive - Drive Thru Condiment Container</title>
     <!-- CSS -->
-    <link href="styles.css" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet">
     <link href="native-css-styles.css" rel="stylesheet">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
