--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h1 class="text-4xl md:text-6xl text-white text-center">Patented</h1>
                     <h2 class="italic text-xl md:text-2xl text-white text-center">January 2022</h2>
                     <div class="h-10"></div>
-                    <div class="xl:h-screen" style="min-height:300px; height: 50vh;">
+                    <div class="h-60 md:h-80" style="min-height:300px; height: 500px;">
                         <iframe id="pdf-js-viewer" src="/pdfjs-2.13.216-dist/web/viewer.html?file=/pdfs/patent.pdf" title="webviewer" frameborder="0" width="100%" height="100%"></iframe>
                     </div>
                 </div>
