--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <a class="underline" href="mailto:ellen@lail.com">ellen@lail.com</a>
                     </div>
                 </div>
-                <div class="h-10 md:h-20"></div>
+                <div class="h-40"></div>
             </div>
         </div>
     </section>
