--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,10 @@
             <div class="mx-10 sm:mx-20">
                 <div class="h-10 md:h-20"></div>
                 <div data-aos="fade-right" data-aos-duration="1000">
-                    <h1 class="text-4xl md:text-6xl text-white text-center my-4">Patent Protected</h1>
+                    <h1 class="text-4xl md:text-6xl text-white text-center">Patented</h1>
+                    <h2 class="italic text-xl md:text-2xl text-white text-center">January 2022</h2>
                     <div class="h-10"></div>
-                    <div class="xl:h-screen" style="min-height:300px; height: 50vh;">
+                    <div class="h-60 md:h-80" style="min-height:300px; height: 500px;">
                         <iframe id="pdf-js-viewer" src="/pdfjs-2.13.216-dist/web/viewer.html?file=/pdfs/patent.pdf" title="webviewer" frameborder="0" width="100%" height="100%"></iframe>
                     </div>
                 </div>
@@ -177,15 +178,7 @@
                         <a class="underline" href="mailto:ellen@lail.com">ellen@lail.com</a>
                     </div>
                 </div>
-                <div class="h-10 md:h-20"></div>
-                <div class="flex flex-auto">
-                    <img data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="m-auto w-10 h-10 md:w-20 md:h-20"
-                        src="/images/facebook-logo.svg">
-                    <img data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" class="m-auto w-10 h-10 md:w-20 md:h-20"
-                        src="/images/instagram-logo.svg">
-                </div>
-
-                <div class="h-32"></div>
+                <div class="h-40"></div>
             </div>
         </div>
     </section>
