--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <header class="relative flex items-center justify-center h-screen overflow-hidden">
@@ -50,6 +51,7 @@
         <div class="custom-center-content-container">
             <div class="mx-10 sm:mx-20">
                 <h1 data-aos="zoom-in" class="text-4xl md:text-6xl text-black text-center"><span class="text-green-500">New</span> Prototypes</h1>
+                <h2 class="italic md:text-2xl text-black text-center">Est. 2023</h2>
                 <!-- Gallery -->
                 <div class="grid grid-cols-2">
                     <div data-aos="fade-right" class="ml-auto">
