--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
     <section class="bg-white">
         <div class="custom-center-content-container">
             <div class="mx-10 sm:mx-20">
-                <h1 data-aos="zoom-in" class="text-4xl md:text-6xl text-black text-center"><span class="text-green-500">New</span> Prototypes</h1>
-                <h2 class="italic md:text-2xl text-black text-center">Est. 2023</h2>
+                <h1 data-aos="zoom-in" class="text-4xl md:text-6xl text-black text-center"><span class="text-green-500">Latest</span> Prototypes</h1>
+                <h2 class="italic md:text-2xl text-black text-center">2023</h2>
+                <div class="text-center">
+                    <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Premium Plastic</span>
+                    <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Curved Design</span>
+                    <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Stackable</span>
+                </div>
                 <!-- Gallery -->
                 <div class="grid grid-cols-2">
                     <div data-aos="fade-right" class="ml-auto">
