added fade in animations

--- a/src/index.html
+++ b/src/index.html
@@ -71,21 +71,21 @@
                     <div class="text-center m-6">
                         <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Multiple Sizes</span>
                     </div>
-                    <img class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-three-sizes.png" />
+                    <img data-aos="fade-left" class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-three-sizes.png" />
                 </div>
                 <hr class="border border-black opacity-40">
                 <div>
                     <div class="text-center m-6">
                         <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Simultaneous Sauces</span>
                     </div>
-                    <img class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-on-drink.png" />
+                    <img data-aos="fade-right" class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-on-drink.png" />
                 </div>
                 <hr class="border border-black opacity-40">
                 <div>
                     <div class="text-center m-6">
                         <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Eco Friendly</span>
                     </div>
-                    <img class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-vs-packets.png" />
+                    <img data-aos="fade-left" class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-vs-packets.png" />
                 </div>
             </div>
         </div>
