--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="custom-center-content-container">
             <div class="mx-10 sm:mx-20">
                 <h1 data-aos="zoom-in" class="text-4xl md:text-6xl text-black text-center"><span class="text-green-500">Latest</span> Prototypes</h1>
-                <h2 class="italic md:text-2xl text-black text-center">2023</h2>
+                <h2 class="italic md:text-2xl text-black text-center mb-4">2023</h2>
                 <div class="text-center">
                     <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Premium Plastic</span>
                     <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Curved Design</span>
@@ -65,6 +65,27 @@
                     <div data-aos="fade-left" class="mr-auto">
                         <img class="h-20 md:h-40 m-6 image-item" src="/images/container-side.png" />
                     </div>
+                </div>
+                <hr class="border border-black opacity-40">
+                <div>
+                    <div class="text-center m-6">
+                        <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Multiple Sizes</span>
+                    </div>
+                    <img data-aos="fade-left" class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-three-sizes.png" />
+                </div>
+                <hr class="border border-black opacity-40">
+                <div>
+                    <div class="text-center m-6">
+                        <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Simultaneous Sauces</span>
+                    </div>
+                    <img data-aos="fade-right" class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-on-drink.png" />
+                </div>
+                <hr class="border border-black opacity-40">
+                <div>
+                    <div class="text-center m-6">
+                        <span><img class="w-4 mx-2 inline-block" src="/images/success-green-check-mark-icon.svg">Eco Friendly</span>
+                    </div>
+                    <img data-aos="fade-left" class="w-80 md:w-80 m-6 image-item mx-auto" src="/images/container-vs-packets.png" />
                 </div>
             </div>
         </div>
