--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <section class="bg-white">
         <div class="custom-center-content-container">
             <div class="mx-10 sm:mx-20">
+                <h1 data-aos="zoom-in" class="text-4xl md:text-6xl text-black text-center italic pt-4 pb-2">Dip 'N Drive</h1>
                 <h1 data-aos="zoom-in" class="text-4xl md:text-6xl text-black text-center"><span class="text-green-500">Latest</span> Prototypes</h1>
                 <h2 class="italic md:text-2xl text-black text-center mb-4">2023</h2>
                 <div class="text-center">
