--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/family-photo.jpg"/>
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="https://www.dipndrive.com/website-preview-image.png">
+    <meta property="og:description"
+        content="Dip 'N Drive Condiment Container are the future of personal containers">
     <meta name="description" content="Dip 'N Drive Condiment Container are the future of personal containers" />
-    <link rel="apple-touch-icon" href="images/family-photo.jpg"/>
+    <link rel="apple-touch-icon" href="images/website-preview-image.png"/>
     <title>Dip 'N Drive - Drive Thru Condiment Container</title>
     <!-- CSS -->
     <link href="styles.css" rel="stylesheet">
