--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,12 @@
     <!-- Metadata -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/family-photo.jpg"/>
+    <link rel="icon" href="images/website-logo.png"/>
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="https://www.dipndrive.com/images/website-preview-image.png">
+    <meta property="og:description" content="Dip 'N Drive Condiment Container are the future of personal containers">
     <meta name="description" content="Dip 'N Drive Condiment Container are the future of personal containers" />
-    <link rel="apple-touch-icon" href="images/family-photo.jpg"/>
+    <link rel="apple-touch-icon" href="images/website-logo.png"/>
     <title>Dip 'N Drive - Drive Thru Condiment Container</title>
     <!-- CSS -->
     <link href="/dist/output.css" rel="stylesheet">
